<resources>
    <string name="app_name">AppNotes</string>
    <string name="hint_title_note_edit_text">Тема</string>
    <string name="hint_description_note_edit_text">Описание</string>
    <string name="text_save_note_button">Save note</string>
    <string name="text_title_alert_dialog">Важная информация!</string>
    <string name="text_positive_alert_dialog">Да</string>
    <string name="text_negative_alert_dialog">Нет</string>
    <string name="text_neutral_alert_dialog">Помощь</string>
    <string name="text_save_note_toast">Заметка сохранена</string>
    <string name="text_add_note_toast">Создана новая заметка</string>
    <string name="text_help_alert_dialog">Нажмите "ДА" для выхода из редактора.</string>
    <string name="text_description_notification">Вы находитесь в редакторе заметки</string>
    <string name="text_message_alert_dialog">Вы хотите выйти из редактирования? Заметка не будет сохранена.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_notification">Информационное сообщение</string>
    <string name="text_about_fragment_text_view">Приложение AppNotes разработано в рамках учебного проекта, студентом GeekBrains, Янчевским Павлом!</string>
    <string name="text_add_note_menu">Добавить</string>
    <string name="text_counter_note_menu">Количество запусков приложения</string>
    <string name="text_exit_note_menu">Выход</string>
    <string name="text_counter_fragment_count_text_view">0</string>
    <string name="text_about_app_note_menu">О приложении</string>
    <string name="text_exit_app_toast">Приложение AppNotes закрыто</string>
    <string name="text_delete_note_popup_menu">Удалить</string>
    <string name="text_edit_note_popup_menu">Редактировать</string>
    <string name="text_counter_fragment_title_text_view">Количество запусков приложения:</string>

</resources>