<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_counter__appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_counter__toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/fragment_counter__description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_counter_fragment_title_text_view"
        android:textColor="@color/black"
        android:textSize="@dimen/title_note_text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_counter__appbar"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/fragment_counter__count_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_count_counter_text_view"
        android:gravity="center"
        android:text="@string/text_counter_fragment_count_text_view"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_count"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/fragment_counter__description_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>