<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/fragment_note__root_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <EditText
        android:id="@+id/fragment_note__title_note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_note_margin_start"
        android:hint="@string/hint_title_note_edit_text"
        android:inputType="text"
        android:paddingBottom="@dimen/title_note_padding_bottom"
        android:textSize="@dimen/title_note_text_size"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_note__description_note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_note_margin_start"
        android:gravity="top"
        android:hint="@string/hint_description_note_edit_text"
        android:inputType="text"
        android:textColor="@color/text_color_description_date"
        android:textSize="@dimen/description_note_text_size"
        app:layout_constraintStart_toStartOf="@id/fragment_note__title_note_edit_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_note__title_note_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_note__save_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_save_note_button"
        android:backgroundTint="@color/background_card_view"
        android:gravity="center"
        android:text="@string/text_save_note_button"
        android:textColor="@color/color_text_save_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>